--- a/Laborationer/Laboration3Responsive/styles/postitstyle.css
+++ b/Laborationer/Laboration3Responsive/styles/postitstyle.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    padding: 50px;
+    margin: 50px auto;
 }
 
 #impo {
@@ -63,9 +63,22 @@ body {
     }
 
 footer {
+    width: 100px;
+    height: 100px;
     position: fixed;
     top: 600px;
-    left: 100px;
+    left: 50px;
+    right: auto;
+}
+footer a{
+    width:100%;
+    height: 100%;
+    border-radius: 10px;
+    font-size: 3em;
+    background-color: #000000;
+    box-shadow:  rgb(0, 0, 0);
+    text-decoration:none;
+    color: white;
 }
 
 .postit {
@@ -110,4 +123,13 @@ footer {
 }
 .postit:hover .hidden {
     opacity: 1;
+}
+@media only screen and (max-width: 480px) {
+    .postit{
+        position:relative;
+        left: 20px !important;
+        right:auto !important;
+        top: 20px !important;
+        bottom:auto!important;
+    }
 }
